--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -36,9 +36,9 @@
         </a>
         <ul class="list-unstyled small text-muted">
           <li class="mb-2">Hear as US LAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a href="#">Web developing and designing,</a> <a href="#">Software developing,</a> Networking, <a href="#">CCTV</a> and many more…</li>
+          <li class="mb-2">US LAYER, Hapugala, Wakwella, 80042</li>
           <li class="mb-2"><a href="tel:=+94769026918">+94 76 902 6918</a></li>
           <li class="mb-2"><a href="tel:=+94772991888">+94 772 991 888</a></li>
-          <li class="mb-2">Copyright © US LAYER</li>
         </ul>
       </div>
       <div class="col-6 col-lg-2 offset-lg-1 mb-3">
@@ -71,6 +71,7 @@
         </ul>
       </div>
     </div>
+    <p class="text-center text-muted border-top">Copyright © US LAYER</p>
   </div>
 </footer>
 
