--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -18,7 +18,8 @@
 
         {% for item in site.data.menus.topmenu %}
           <li class="nav-item col-6 col-md-auto">
-            <a href="{% unless item.external %}{{site.baseurl}}/{% endunless %}{{item.url}}" class="nav-link p-2 {% if page.url == item.url %}active{% endif %}" alt="{{item.title}}">{{item.title}}</a>                        
+            <a href="{{item.url}}" 
+            class="nav-link p-2 {% if page.url == item.url %}active{% endif %}" alt="{{item.title}}">{{item.title}}</a>                        
           </li>
         {% endfor %}
 
