--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -9,13 +9,17 @@
       var chatbox = document.getElementById('fb-customer-chat');
       chatbox.setAttribute("page_id", "{{site.fbpageid}}");
       chatbox.setAttribute("attribution", "biz_inbox");
+    </script>
+    
+    <!-- Your SDK code -->
+    <script>
       window.fbAsyncInit = function() {
         FB.init({
           xfbml            : true,
-          version          : 'v10.0'
+          version          : 'v14.0'
         });
       };
-
+    
       (function(d, s, id) {
         var js, fjs = d.getElementsByTagName(s)[0];
         if (d.getElementById(id)) return;
@@ -24,8 +28,7 @@
         fjs.parentNode.insertBefore(js, fjs);
       }(document, 'script', 'facebook-jssdk'));
     </script>
-
-
+    
 <footer class="bd-footer py-5 mt-5 bg-light">
   <div class="container py-5">
     <div class="row">
