--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,7 @@
         <ul class="list-unstyled small text-muted">
           <li class="mb-2">Hear as US LAYER our intention is to provide information(IT) services. So we mainly provide security, management and information services. Such as, <a href="#">Web developing and designing,</a> <a href="#">Software developing,</a> Networking, <a href="#">CCTV</a> and many more…</li>
           <li class="border-top"></li>
-          <li class="mb-2">US LAYER, Hapugala, Wakwella, 80042</li>
+          <li class="mb-2">US LAYER, Hapugala, Wakwella, Galle, Sri Lanka.</li>
           <li class="mb-2"><a href="tel:=+94769026918">+94 76 902 6918</a> (CCTV, Alarm | Home security)</li>
           <li class="mb-2"><a href="tel:=+94772991888">+94 772 991 888</a> (Software development)</li>
         </ul>
