--- a/_layouts/product-page.html
+++ b/_layouts/product-page.html
@@ -9,6 +9,24 @@ layout: default
 {% endif %}
 <!-- End Featured Image -->
 
+<section class="py-5 text-center container">
+  <img class="rounded-lg-3" src="/assets/images/hikvision-logo.png" alt="Hikvision logo" width="40%">
+    <div class="row py-lg-5">
+      <div class="col-lg-6 col-md-8 mx-auto">
+        <h1 class="fw-light">If you want to get prices of hikvision CCTV camera or hikvision web camera or any other hikvision products please contact,</h1>
+        <p class="lead text-muted">You can buy Hikvision products in Galle.</p>
+        <p>
+          <a href="tel:=+94769026918" class="btn btn-primary my-2">+94 76 902 6918</a>
+        </p>
+      </div>
+    </div>
+</section>
+
+{% include products.html %}
+
+
+<p class="lead text-muted text-center">Hikivisin logo is the registered trademark of Hangzhou Hikvision Digital Technology Co., Ltd</p>
+
 
 
 {{content}}
